# CPT-180-27-S2016-Course-Info

./: .gitmodules  CPT-180-Paul-Scarrone-Syllabus.docx  ClassBio.md  README.md
notes/week_10/more_recursion/: CMakeLists.txt  main.cpp
notes/week_10/recursion/: CMakeLists.txt  main.cpp
notes/week_10/recursive_invert_arrays/: CMakeLists.txt  main.cpp
notes/week_2/types_and_declaration/: CMakeLists.txt  main.cpp
notes/week_3/pointers_arrays/: CMakeLists.txt  main.cpp
notes/week_3/references/: CMakeLists.txt  main.cpp
notes/week_5/functions/: CMakeLists.txt  main.cpp
notes/week_5/making_a_library/driver/: CMakeLists.txt  main.cpp
notes/week_5/refactor_with_functions/: CMakeLists.txt  calorie.cpp  calorie.h
notes/week_6/bubble_sort/: CMakeLists.txt  (+1 more)
test_resources/: exam_1_guide.md  exam_2_guide.md
test_resources/exam_1_solutions/: q4_condition_simplification.cpp  q8_integer_division.cpp  q9_calorie_program.cpp
textbook_resources/PowerPoints/: SOW_C++_CSO_Chapter_01_8e.ppt  SOW_C++_CSO_Chapter_02_8e.ppt  SOW_C++_CSO_Chapter_03_8e.ppt  SOW_C++_CSO_Chapter_04_8e.ppt  SOW_C++_CSO_Chapter_05_8e.ppt  SOW_C++_CSO_Chapter_06_8e.ppt  SOW_C++_CSO_Chapter_07_8e.ppt  SOW_C++_CSO_Chapter_08_8e.ppt  SOW_C++_CSO_Chapter_09_8e.ppt  SOW_C++_CSO_Chapter_10_8e.ppt  SOW_C++_CSO_Chapter_11_8e.ppt  SOW_C++_CSO_Chapter_12_8e.ppt  SOW_C++_CSO_Chapter_13_8e.ppt  SOW_C++_CSO_Chapter_14_8e.ppt  SOW_C++_CSO_Chapter_15_8e.ppt  SOW_C++_CSO_Chapter_16_8e.ppt  SOW_C++_CSO_Chapter_17_8e.ppt  SOW_C++_CSO_Chapter_18_8e.ppt  SOW_C++_CSO_Chapter_19_8e.ppt  SOW_C++_CSO_Chapter_20_8e.ppt
(+42 files in other folders)
